--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_definitions(-std=c++11 -O3)
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-set(sources src/MPC.cpp src/main.cpp)
+set(sources src/MPC.cpp src/main.cpp src/tools.cpp)
 
 include_directories(src/Eigen-3.3)
 
@@ -25,5 +25,11 @@ endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 add_executable(mpc ${sources})
 
-target_link_libraries(mpc ipopt z ssl uv uWS)
+#target_link_libraries(mpc ipopt z ssl uv uWS)
+
+if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+target_link_libraries(mpc ipopt z ssl uv uWS python2.7)
+else()
+target_link_libraries(mpc ipopt z ssl uv uWS python)
+endif()
 
